# walleng-decompress-pkg

./: .gitignore  README.md  pyproject.toml  walleng.py
docs/: pkg-format.md  tex-format.md
src/walleng_pkg/: __init__.py  cli.py  core.py  gui.py  i18n.py  tex.py
src/walleng_pkg/translations/: en.json  es.json
tests/: test_core.py  test_tex.py
