[project]
name = "walleng-pkg"
version = "1.0.0"
description = "Decompress .pkg files from Wallpaper Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "bpato"}]
keywords = ["wallpaper-engine", "pkg", "decompress"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["PySide6"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
walleng-pkg = "walleng_pkg.cli:main"
walleng-pkg-gui = "walleng_pkg.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/walleng_pkg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
